// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package objectengine.master.v1;

import "tenant.proto";
import "bucket.proto";
import "ingest.proto";

service Master {
  rpc Batch(BatchRequest) returns (BatchResponse) {}
}

message BatchRequest { repeated RequestUnion requests = 1; }

message BatchResponse { repeated ResponseUnion responses = 1; }

message RequestUnion {
  oneof request {
    ListTenantsRequest list_tenants = 1;
    CreateTenantRequest create_tenant = 2;
    UpdateTenantRequest update_tenant = 3;
    DeleteTenantRequest delete_tenant = 4;
    DescribeTenantRequest describe_tenant = 5;
    ListBucketsRequest list_buckets = 6;
    CreateBucketRequest create_bucket = 7;
    UpdateBucketRequest update_bucket = 8;
    DeleteBucketRequest delete_bucket = 9;
    DescribeBucketRequest describe_bucket = 10;
    BeginBulkLoadRequest begin_bulkload = 11;
    CommitBulkLoadRequest commit_bulkload = 12;
    AllocateFileNamesRequest allocate_file_names = 13;
  }
}

message ResponseUnion {
  oneof response {
    ListTenantsResponse list_tenants = 1;
    CreateTenantResponse create_tenant = 2;
    UpdateTenantResponse update_tenant = 3;
    DeleteTenantResponse delete_tenant = 4;
    DescribeTenantResponse describe_tenant = 5;
    ListBucketsResponse list_buckets = 6;
    CreateBucketResponse create_bucket = 7;
    UpdateBucketResponse update_bucket = 8;
    DeleteBucketResponse delete_bucket = 9;
    DescribeBucketResponse describe_bucket = 10;
    BeginBulkLoadResponse begin_bulkload = 11;
    CommitBulkLoadResponse commit_bulkload = 12;
    AllocateFileNamesResponse allocate_file_names = 13;
  }
}
